# Llama3-linear-merge-llms

./: .gitignore  Llama_linear_merge_8B.ipynb  README.md  Rich Text to Markdown Converter.html  config.yaml  main.py  merged__mini.ipynb  pyproject.toml  richtext_converted_to_markdown.md
Rich Text to Markdown Converter_files/: 0c428ae2-3e3ce09fac5a88f0.js  0d7064d5a3a333f2.css  1a48c3c1-384dd96301fc7a97.js  1bfc9850-2f6a3c5120fe2aa1.js  4920a0a5-3b9cbcaf8d3238c0.js  5c34e4e7ab31b75f.css  772-2f5f1ff782608340.js  92719ab0-730962207914529b.js  _app-275be2b6dc761dfd.js  _buildManifest.js  ae51ba48-7a78a2ca76c3274e.js  b78f9965-5f4cd72d8af6cba6.js  bde4dc6cf0c6d9da.css  button.prod.min.js  cc1eeab6-8dc1e77f0076225a.js  d2cec0cb-4355a2b42ea21ada.js  d3048c20-071e2cb98c0f9b86.js  d7eeaac4-edbb07e54d9551ef.js  index-16ef8476dcc0f2cb.js  webpack-6a04bd7681febafb.js
notebooks/: merge-2.ipynb  merged__mini.ipynb
