[project]
name = "llama3-linear-merge-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "bitsandbytes>=0.42.0"
    
]
